AUTOMAKE_OPTIONS = foreign

modeleditordocdir = ${pkglibdir}/doc

modeleditordoc_DATA = \
differential1.gif  differential2.gif  initial_values.gif  reaction_equation.gif\
HOW-TO.htm Tutorial.htm\
Tutorial_htm_23e557e7.jpg   Tutorial_htm_m1846d5f6.jpg\
Tutorial_htm_c6de307.jpg    Tutorial_htm_m1d2b949b.jpg\
Tutorial_htm_dfb0ae5.jpg    Tutorial_htm_m3d6e2535.jpg\
Tutorial_htm_m11d8617f.jpg  Tutorial_htm_m467f7435.jpg\
Tutorial_htm_m1305726a.jpg  Tutorial_htm_m668b052.jpg\
Tutorial_htm_m13c8c45.jpg

EXTRA_DIST=${modeleditordoc_DATA}

