AUTOMAKE_OPTIONS = foreign

modeleditorgladedir = ${pkglibdir}/glade

modeleditorglade_DATA = \
application_small.xpm\
ConnectionObjectEditorWindow.glade\
DialogWindow.glade\
EntityListWindow.glade\
FullIDChooser.glade\
icon_entity.xpm\
icon_stepper.xpm\
LayoutManagerWindow.glade\
ListComponent.glade\
MainWindow.glade\
MultiLineEditor.glade\
NestedListEditor.glade\
ObjectEditor.glade\
PathwayEditor.glade\
pathway.xpm\
ShapePropertyComponent.glade\
StepperChooser.glade\
StepperWindow.glade\
ValidateWindow.glade\
selector.xpm\
variable.xpm\
custom.xpm\
system.xpm\
process.xpm\
textbox.xpm\
layoutmanager.xpm\
layoutmanager.xpm\
VariableReferenceEditorComponent.glade\
ShapePropertyComponent.glade\
LinePropertyComponent.glade\
LayoutManagerWindow.glade\
ConnectionObjectEditorWindow.glade



EXTRA_DIST=${modeleditorglade_DATA}

