AUTOMAKE_OPTIONS = foreign

modeleditorgladedir = ${pkglibdir}/glade

modeleditorglade_DATA = \
application_small.png\
ConnectionObjectEditorWindow.glade\
DialogWindow.glade\
EntityListWindow.glade\
FullIDChooser.glade\
icon_entity.png\
icon_stepper.png\
LayoutManagerWindow.glade\
ListComponent.glade\
MainWindow.glade\
MultiLineEditor.glade\
NestedListEditor.glade\
ObjectEditor.glade\
PathwayEditor.glade\
pathway.png\
ShapePropertyComponent.glade\
StepperChooser.glade\
StepperWindow.glade\
ValidateWindow.glade\
selector.png\
variable.png\
custom.png\
system.png\
process.png\
textbox.png\
layoutmanager.png\
VariableReferenceEditorComponent.glade\
ShapePropertyComponent.glade\
LinePropertyComponent.glade\
LayoutManagerWindow.glade\
ConnectionObjectEditorWindow.glade



EXTRA_DIST=${modeleditorglade_DATA}

