AUTOMAKE_OPTIONS = foreign

modeleditorgladedir = ${pkglibdir}/glade

modeleditorglade_DATA = \
AboutModelEditor.glade\
ConnectionObjectEditorWindow.glade\
DialogWindow.glade\
EntityListWindow.glade\
FullIDChooser.glade\
LayoutManagerWindow.glade\
LinePropertyComponent.glade\
ListComponent.glade\
MainWindow.glade\
MultiLineEditor.glade\
NestedListEditor.glade\
ObjectEditor.glade\
PathwayEditor.glade\
ShapePropertyComponent.glade\
StepperChooser.glade\
StepperWindow.glade\
ValidateWindow.glade\
VariableReferenceEditorComponent.glade\
icon_custom.png\
icon_entity.png\
icon_layoutmanager.png\
icon_modeleditor.png\
icon_pathway.png\
icon_process.png\
icon_selector.png\
icon_stepper.png\
icon_system.png\
icon_textbox.png\
icon_variable.png\
modeleditor.png\
modeleditor_large.png


EXTRA_DIST=${modeleditorglade_DATA}

