AUTOMAKE_OPTIONS = foreign

modeleditorplugindir = ${pkglibdir}/plugin

modeleditorplugin_DATA = \
VariableSD.py\
ProcessSD.py\
SystemSD.py\
GeneVariableSD.py\
ProteinVariableSD.py\
RNAVariableSD.py\
SmallMolVariableSD.py\
IonVariableSD.py\
OtherProcessSD.py\
IonVariableSD.png
EXTRA_DIST=${modeleditorplugin_DATA}

