AUTOMAKE_OPTIONS = foreign

osogopluginsdir = ${pkglibdir}/plugins

osogoplugins_DATA = BargraphWindow.glade\
BargraphWindow.py\
BargraphWindow.xpm\
DigitalWindow.glade\
DigitalWindow.py\
DigitalWindow.xpm\
PropertyWindow.glade\
PropertyWindow.py\
PropertyWindow.xpm\
SubstanceWindow.glade\
SubstanceWindow.py\
SubstanceWindow.xpm\
TracerWindow.glade\
icon_down.xpm\
icon_down_small.xpm\
icon_left_small.xpm\
icon_right_small.xpm\
icon_up.xpm\
icon_up_small.xpm

