AUTOMAKE_OPTIONS = foreign

osogopluginsdir = ${pkglibdir}/plugins

osogoplugins_DATA = BargraphWindow.glade\
BargraphWindow.py\
BargraphWindow.xpm\
DigitalWindow.glade\
DigitalWindow.py\
DigitalWindow.xpm\
PropertyWindow.glade\
PropertyWindow.py\
PropertyWindow.xpm\
VariableWindow.glade\
VariableWindow.py\
VariableWindow.xpm\
TracerWindow.py\
TracerWindow.glade\
TracerWindow.xpm\
InputWindow.glade\
icon_down.xpm\
icon_down_small.xpm\
icon_left_small.xpm\
icon_right_small.xpm\
icon_up.xpm\
icon_up_small.xpm\
bluesq.xpm\
purplesq.xpm\
blue.xpm\
purple.xpm\
brownsq.xpm\
redsq.xpm\
brown.xpm\
red.xpm\
navysq.xpm\
greensq.xpm\
navy.xpm\
green.xpm\
orangesq.xpm\
orange.xpm

EXTRA_DIST=${osogoplugins_DATA}

