## Process this file with automake to produce Makefile.in
AUTOMAKE_OPTIONS = foreign


toollaunchermiscdir=${pkglibdir}/misc
toollaunchermisc_PYTHON=\
CompileCpp.py\
CopyDirectory.py\
Eml.py\
MessageWindowToolLauncher.py\
OutputMessage.py\
Preferences.py\
ZipManager.py\
fileFind.py

EXTRA_DIST=${toollaunchermisc_PYTHON}

